--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 #user  nobody;
-worker_processes  1;
+worker_processes  auto;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -18,7 +18,11 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-    lua_package_path "/opt/nginx/lib/lua/?.lua;;";
+
+    lua_package_path "/opt/nginx/lib/lua/?.lua;/opt/nginx/conf/waf/?.lua;";
+    lua_shared_dict limit 10m;
+    init_by_lua_file  /opt/nginx/conf/waf/init.lua;
+    access_by_lua_file /opt/nginx/conf/waf/waf.lua;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
@@ -115,5 +119,5 @@ http {
     #        index  index.html index.htm;
     #    }
     #}
-
+    include vhost/*.conf;
 }
