--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,123 +1,95 @@
-#user  nobody;
+user  www;
 worker_processes  auto;
-
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
 
 load_module ./modules/ndk_http_module.so;
 load_module ./modules/ngx_http_lua_module.so;
+load_module ./modules/ngx_http_geoip2_module.so;
+load_module ./modules/ngx_stream_geoip2_module.so;
 
 events {
     worker_connections  1024;
 }
 
+stream {
+
+    geoip2 GeoIP/GeoIP2-Country.mmdb {
+        auto_reload 5m;
+        $geoip2_metadata_country_build metadata build_epoch;
+        $geoip2_data_country_code default=US source=$remote_addr country iso_code;
+        $geoip2_data_country_name country names en;
+    }
+
+    geoip2 GeoIP/GeoIP2-City.mmdb {
+        $geoip2_data_city_name default=London city names en;
+    }
+
+    map $geoip2_data_country_code $stream_allowed_country {
+        default stream_unavailable;
+        TW stream_available;
+        AE stream_available;
+    }
+    include     vhost_layer4/*.conf;
+}
 
 http {
     include       mime.types;
     default_type  application/octet-stream;
+
+    geoip2 GeoIP/GeoIP2-Country.mmdb {
+        auto_reload 5m;
+        $geoip2_metadata_country_build metadata build_epoch;
+        $geoip2_data_country_code default=US source=$http_x_forwarded_for country iso_code;
+        $geoip2_data_country_name country names en;
+    }
+
+    geoip2 GeoIP/GeoIP2-City.mmdb {
+        $geoip2_data_city_name default=London city names en;
+    }
+
+    map $geoip2_data_country_code $http_allowed_country {
+        default no;
+        TW yes;
+        AE yes;
+    }
 
     lua_package_path "/opt/nginx/lib/lua/?.lua;/opt/nginx/conf/waf/?.lua;";
     lua_shared_dict limit 10m;
     init_by_lua_file  /opt/nginx/conf/waf/init.lua;
     access_by_lua_file /opt/nginx/conf/waf/waf.lua;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '"$http_x_forwarded_for" $remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$geoip2_data_country_code"';
 
-    #access_log  logs/access.log  main;
+    access_log  logs/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
 
-    #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
 
     server {
         listen       80;
         server_name  localhost;
 
-        #charset koi8-r;
-
         #access_log  logs/host.access.log  main;
+
+        if ($http_allowed_country = no) {
+             return 444;
+        }
 
         location / {
             root   html;
             index  index.html index.htm;
         }
 
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   html;
         }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
 
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
-
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
-
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
     include vhost/*.conf;
 }
