Add modsecurity support

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,61 +1,55 @@
 user  root;
 worker_processes  auto;
 
-load_module ./modules/ndk_http_module.so;
-load_module ./modules/ngx_http_lua_module.so;
 load_module ./modules/ngx_http_geoip2_module.so;
 load_module ./modules/ngx_stream_geoip2_module.so;
+load_module ./modules/ngx_http_modsecurity_module.so;
 
 events {
-    worker_connections  1024;
+	worker_connections  1024;
 }
 
 stream {
 
-    geoip2 GeoIP/GeoIP2-Country.mmdb {
-        auto_reload 5m;
-        $geoip2_metadata_country_build metadata build_epoch;
-        $geoip2_data_country_code default=US source=$remote_addr country iso_code;
-        $geoip2_data_country_name country names en;
-    }
+	geoip2 GeoIP/GeoIP2-Country.mmdb {
+		auto_reload 5m;
+		$geoip2_metadata_country_build metadata build_epoch;
+		$geoip2_data_country_code default=US source=$remote_addr country iso_code;
+		$geoip2_data_country_name country names en;
+	}
 
-    geoip2 GeoIP/GeoIP2-City.mmdb {
-        $geoip2_data_city_name default=London city names en;
-    }
+	geoip2 GeoIP/GeoIP2-City.mmdb {
+		$geoip2_data_city_name default=London city names en;
+	}
 
-    map $geoip2_data_country_code $stream_allowed_country {
-        default stream_unavailable;
-        TW stream_available;
-        AE stream_available;
-    }
-    include     vhost_layer4/*.conf;
+	map $geoip2_data_country_code $stream_allowed_country {
+		default stream_unavailable;
+		TW stream_available;
+		AE stream_available;
+	}
+	include vhost_layer4/*.conf;
 }
 
 http {
-    include       mime.types;
+	include       mime.types;
     default_type  application/octet-stream;
 
-    geoip2 GeoIP/GeoIP2-Country.mmdb {
-        auto_reload 5m;
-        $geoip2_metadata_country_build metadata build_epoch;
-        $geoip2_data_country_code default=US source=$http_x_forwarded_for country iso_code;
-        $geoip2_data_country_name country names en;
-    }
+	geoip2 GeoIP/GeoIP2-Country.mmdb {
+		auto_reload 5m;
+		$geoip2_metadata_country_build metadata build_epoch;
+		$geoip2_data_country_code default=US source=$http_x_forwarded_for country iso_code;
+		$geoip2_data_country_name country names en;
+	}
 
-    geoip2 GeoIP/GeoIP2-City.mmdb {
-        $geoip2_data_city_name default=London city names en;
-    }
+	geoip2 GeoIP/GeoIP2-City.mmdb {
+		$geoip2_data_city_name default=London city names en;
+	}
 
-    map $geoip2_data_country_code $http_allowed_country {
-        default no;
-        TW yes;
-        AE yes;
-    }
-
-    lua_package_path "/opt/nginx/lib/lua/?.lua;/opt/nginx/conf/waf/?.lua;";
-    lua_shared_dict limit 10m;
-    init_by_lua_file  /opt/nginx/conf/waf/init.lua;
-    access_by_lua_file /opt/nginx/conf/waf/waf.lua;
+	map $geoip2_data_country_code $http_allowed_country {
+		default no;
+		TW yes;
+		AE yes;
+	}
 
     log_format  main  '"$http_x_forwarded_for" $remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
@@ -70,26 +64,29 @@ http {
 
     gzip  on;
 
-    server {
-        listen       80;
-        server_name  localhost;
+	server {
+		listen       80;
+		server_name  localhost;
 
-        #access_log  logs/host.access.log  main;
+		#access_log  logs/host.access.log  main;
 
-        if ($http_allowed_country = no) {
-             return 444;
-        }
+		modsecurity on;
+		modsecurity_rules_file /opt/nginx/conf/modsec/modsec_includes.conf;
 
-        location / {
-            root   html;
-            index  index.html index.htm;
-        }
+		#if ($http_allowed_country = no) {
+		#   return 444;
+		#}
 
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-    }
+		location / {
+			root   html;
+			index  index.html index.htm;
+		}
+
+		error_page   500 502 503 504  /50x.html;
+		location = /50x.html {
+			root   html;
+		}
+	}
 
     include vhost/*.conf;
 }
